<resources>
    <string name="app_name">My Insta Clone</string>


    <string name="server_url">https://parseapi.back4app.com/</string>
    <string name="app_id">19M1h2d0Ttcsdxdf09E1Q1ew3I4IO3s6TvMGbUWA</string>
    <string name="client_key">3uaKjlv2sWWD6Ypwqkh57sT9sWbrBTaI6b24EflC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="likes">Likes</string>
    <string name="profile">Profile</string>
    <string name="media">Media</string>
    <string name="discover_people">Discover People</string>
    <string name="comments">Comments</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="_3_days">3 days</string>
    <string name="border">TODO</string>
    <string name="comment">Хорошее фото</string>
    <string name="count_likes">11</string>
    <string name="answer">Answer</string>
    <string name="show_translation">Show translation</string>
    <string name="comment_like_svetlana">Comment like Svetlana</string>
    <string name="Publish">Отправить</string>
    <string name="age">age</string>
    <string name="phone">phone</string>
    <string name="img">img</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="create_your_login">Create your login</string>
    <string name="log_in">Log in</string>
    <string name="create_password">Create password</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="description">description</string>
    <string name="camera">Camera</string>
    <string name="account_already_exists_for_this_username">Account already exists for this username.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="posts">posts</string>
    <string name="_0">0</string>
    <string name="i_think">I think :</string>
    <string name="my_name">My name</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_name">Your name</string>
    <string name="sing_up">Sing up.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

</resources>