<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:orderInCategory="1"
       />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/postMediaFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/mediaFragment"
        android:icon="@drawable/ic_play"
        android:title="@string/media"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:orderInCategory="5"/>
</menu>