<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commentsFotos"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_profile_img"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/commentsUserName" />

        <TextView
            android:id="@+id/commentsUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Ruslan"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/commentsFotos"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_3_days"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/commentsUserName"
            app:layout_constraintStart_toEndOf="@+id/commentsUserName"
            app:layout_constraintTop_toTopOf="@+id/commentsUserName" />

        <ImageView
            android:id="@+id/commentsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentsUserName"
            app:srcCompat="@drawable/ic_likes_border"
            android:contentDescription="@string/border" />

        <TextView
            android:id="@+id/commentsUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/commentsLike"
            app:layout_constraintStart_toStartOf="@+id/commentsUserName"
            app:layout_constraintTop_toBottomOf="@+id/commentsUserName" />

        <TextView
            android:id="@+id/commentsNumberLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/count_likes"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/commentsLike"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/commentsLike"
            app:layout_constraintTop_toBottomOf="@+id/commentsLike" />

        <TextView
            android:id="@+id/commentsAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/answer"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/commentsUser"
            app:layout_constraintTop_toBottomOf="@+id/commentsUser" />

        <TextView
            android:id="@+id/commentsTransletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/show_translation"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/commentsAnswer"
            app:layout_constraintStart_toEndOf="@+id/commentsAnswer"
            app:layout_constraintTop_toTopOf="@+id/commentsAnswer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
