<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileeeee"
    android:background="@color/white"
    tools:context=".presentation.screens._profile.ProfileFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_profile_text"
                    style="@style/toolbar_text"
                    android:text="@string/email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/choose_menu"
                    style="@style/toolbar_image"
                    android:layout_marginEnd="8dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/img" />

                <ImageView
                    android:id="@+id/add_friend"
                    style="@style/toolbar_image"
                    android:src="@drawable/ic_user_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/choose_menu"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/img" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
            app:layout_constraintVertical_bias="0.0">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp"
                android:src="@drawable/img_profile_img"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/edit_profile_btn"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_posts"
                style="@style/numbers_profile"
                android:text="@string/_0"
                app:layout_constraintEnd_toStartOf="@+id/number_followers"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageProfile"
                app:layout_constraintTop_toTopOf="@+id/imageProfile" />

            <TextView
                android:id="@+id/number_followers"
                style="@style/numbers_profile"
                android:text="@string/_0"
                app:layout_constraintBottom_toBottomOf="@+id/number_posts"
                app:layout_constraintEnd_toStartOf="@+id/number_following"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/number_posts"
                app:layout_constraintTop_toTopOf="@+id/number_posts" />

            <TextView
                android:id="@+id/number_following"
                style="@style/numbers_profile"
                android:text="@string/_0"
                app:layout_constraintBottom_toBottomOf="@+id/number_followers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/number_followers"
                app:layout_constraintTop_toTopOf="@+id/number_followers" />

            <TextView
                android:id="@+id/textView7"
                style="@style/text_profile"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/posts"
                app:layout_constraintBottom_toTopOf="@+id/edit_profile_btn"
                app:layout_constraintEnd_toEndOf="@+id/number_posts"
                app:layout_constraintStart_toStartOf="@+id/number_posts"
                app:layout_constraintTop_toBottomOf="@+id/number_posts" />

            <TextView
                android:id="@+id/textView8"
                style="@style/text_profile"
                android:text="@string/followers"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/number_followers"
                app:layout_constraintStart_toStartOf="@+id/number_followers"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                style="@style/text_profile"
                android:text="@string/following"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@+id/number_following"
                app:layout_constraintStart_toStartOf="@+id/number_following"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="5"
                app:layout_constraintStart_toEndOf="@+id/imageProfile"
                app:strokeColor="@color/grey"
                app:strokeWidth="0.1dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/i_think"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageProfile"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/my_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                app:layout_constraintStart_toStartOf="@+id/imageProfile"
                app:layout_constraintTop_toBottomOf="@+id/imageProfile" />


            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/your_bio"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/edit_profile_btn"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_images"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/account_already_exists_for_this_username"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_my_following"
                app:spanCount="3"
                tools:listitem="@layout/item_my_images" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_following"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_bio" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>