<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_splashScreenFragment_to_latestMessagesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presentation.screens._sign_in.SignInFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/inter_full_name"
                style="@style/sign_edit_text"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:autofillHints="aa"
                android:background="@drawable/login_input_bg"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/passwor"
                style="@style/sign_edit_text"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_input_bg"
                android:hint="Password"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/inter_full_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/inter_full_name"
                app:layout_constraintTop_toBottomOf="@+id/inter_full_name" />

            <Button
                android:id="@+id/registration_btn"
                style="@style/toolbar_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="15dp"
                android:text="@string/log_in"
                android:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/passwor"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/passwor"
                app:layout_constraintTop_toBottomOf="@+id/passwor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_btn"
                app:layout_constraintVertical_bias="0.88" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="164dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/img_icon_dis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/img_icon_display"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/sing_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sing_up"
                android:textColor="#129BF6"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>